Login UI and Implmentation

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+
+.btn-primary {
+  background-color: #8e44ad;
+  border-color: #8e44ad;
+  border-radius: 30rem;
+}
