--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
           </li>
           <li class="nav-item">
             <!-- <a class="nav-link btn btn-outline-primary ml-2" routerLink="/login">Login</a> -->
-            <button type="submit" routerLink="/login" class="btn btn-primary w-100">Login</button>
+            <button type="submit" routerLink="/login" class="btn btn-primary w-100">LOGIN</button>
 
           </li>
         </ul>
@@ -33,5 +33,5 @@
 </div>
 
 <div class="container-fluid p-0">
-  <app-login></app-login>
+  <router-outlet></router-outlet>
 </div>
