--- a/src/app/pages/users-list/users-list.component.html
+++ b/src/app/pages/users-list/users-list.component.html
@@ -1,1 +1,96 @@
-<p>users-list works!</p>
+<div class="container-fluid bg-grey py-4">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <h1 class="mb-0">Users List</h1>
+      </div>
+      <div class="col-md-6 d-flex justify-content-end">
+        <button class="btn btn-primary" (click)="openAddUserModal()">+ New User</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid bg-light py-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card users-card" *ngIf="!loading">
+          <table class="table table-hover">
+            <thead>
+              <tr class="">
+                <th scope="col" class="column-1">User</th>
+                <th scope="col" class="text-center">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="" *ngFor="let user of users" [class.selected]="selectedUser && selectedUser.id === user.id">
+                <td class="td-height">
+                  <div class="d-flex align-items-center">
+                    <div class="col-md-1">
+                    </div>
+                    <div class="col-md-1">
+                      <img [src]="user.avatar" alt="{{user.first_name}}" class="rounded-circle mr-3 user-avatar">
+                    </div>
+                    <div class="col-md-6">
+                      <h5 class="mb-0">{{user.first_name}} {{user.last_name}}</h5>
+                      <!-- <p class="mb-0">{{user.email}}</p> -->
+                    </div>
+                  </div>
+                </td>
+                <td class="text-center">
+                  <div style="display: flex; justify-content: center;">
+
+                  <div class="1st-button">
+                      <button class="btn btn-outline-primary btn-sm mr-2" (click)="openEditUserModal(user); $event.stopPropagation();">
+                        <i class="fas fa-edit"></i>
+                      </button>
+                      <button class="btn btn-outline-danger btn-sm mr-2" (click)="deleteUser(user.id); $event.stopPropagation();">
+                        <i class="fas fa-trash-alt"></i>
+                      </button>
+                  </div>
+                  <div class="2nd-button">
+                      <button class="btn btn-outline-secondary btn-sm" (click)="selectUser(user.id); $event.stopPropagation(); openOffCanvas();">
+                        <i class="fas fa-arrow-right"></i>
+                      </button>
+                  </div>
+                </div>
+                </td>
+              </tr>
+              <tr *ngIf="loadingMore">
+                <td colspan="2" class="text-center">
+                  <div class="spinner-border" role="status">
+                    <span class="sr-only">Loading...</span>
+                  </div>
+                  <p>Loading more users</p>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="text-center mt-3">
+            <button class="btn btn-primary" (click)="loadMoreUsers()">Load More</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offCanvasUser" aria-labelledby="offCanvasUserLabel">
+  <div class="offcanvas-header">
+    <h5 id="offCanvasUserLabel">{{ selectedUser?.first_name }} {{ selectedUser?.last_name }}</h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <img [src]="selectedUser?.avatar" class="rounded-circle mb-3 user-avatar-large" alt="{{selectedUser?.first_name}}">
+    <p>{{ selectedUser?.email }}</p>
+    <div class="d-flex justify-content-between">
+      <button class="btn btn-primary flex-fill mr-2" (click)="openEditUserModal(selectedUser)">
+        Edit
+      </button>
+      <button class="delete btn btn-outline-primary flex-fill ml-2" (click)="deleteUser(selectedUser?.id)">
+        Delete
+      </button>
+    </div>
+  </div>
+</div>
