--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -8,14 +8,22 @@
         <div class="card-body">
           <h2 class="card-title">Welcome back!</h2>
           <p class="card-text">Please login to access your <span class="text-primary">Spaces</span> Dashboard</p>
-          <form (ngSubmit)="login()">
+          <form #loginForm="ngForm"  (ngSubmit)="login()">
             <div class="form-group">
               <label for="email">Username</label>
-              <input type="email" class="form-control" id="email" [(ngModel)]="email" name="email" placeholder="Username..." required>
+              <input type="email" class="form-control" id="email"
+                  [(ngModel)]="email" name="email" placeholder="Username..."
+                  required>
+                  <!-- #email="ngModel" -->
+              <!-- <div *ngIf=" email?.errors?.required" class="text-danger">
+                Email is required
+              </div> -->
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" id="password" [(ngModel)]="password" name="password" placeholder="********" required>
+              <input type="password" class="form-control" id="password"
+               [(ngModel)]="password"
+               name="password" placeholder="********" required>
             </div>
             <div class="d-flex justify-content-between align-items-center">
               <a href="#" class="text-primary">Forgot password?</a>
