--- a/src/app/pages/create-update-user/create-update-user.component.html
+++ b/src/app/pages/create-update-user/create-update-user.component.html
@@ -13,7 +13,7 @@
           </div>
           <div class="form-group">
             <label for="job">Job Title</label>
-            <input type="text" class="form-control" id="job" name="job" [(ngModel)]="userReqModel.job" required>
+            <input type="text" class="form-control" id="job" name="job" [(ngModel)]="job" required>
           </div>
           <div class="modal-footer justify-content-center">
             <button class="cancel btn btn-outline-primary btn-lg mr-2" (click)="Cancel()">Cancel</button>
