--- a/src/app/pages/delete-user/delete-user.component.html
+++ b/src/app/pages/delete-user/delete-user.component.html
@@ -1,1 +1,16 @@
-<p>delete-user works!</p>
+<div class="modal" style="display: block;" aria-labelledby="userModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="dialog">
+    <div class="modal-content">
+
+
+<div class="modal-body">
+  <p>Are you sure you want to delete</p>
+  <strong>George Bluth</strong>
+</div>
+<div class="modal-footer justify-content-center">
+  <button type="button" class="cancel btn btn-outline-primary btn-lg mr-2" (click)="dismiss()">No</button>
+  <button type="button" class="btn btn-primary btn-lg" (click)="confirm()">Yes</button>
+</div>
+</div>
+</div>
+</div>
