--- a/src/app/pages/create-update-user/create-update-user.component.scss
+++ b/src/app/pages/create-update-user/create-update-user.component.scss
@@ -6,6 +6,10 @@
   border-radius: 30rem;
   color :#8e44ad
 }
+
+.cancel:hover {
+  background-color :#f3eded
+}
 .user-avatar-modal {
   width: 80px;
   height: 80px;
@@ -20,7 +24,6 @@
 .btn-lg {
   padding:0 4.5rem;
 }
-
 
 .modal-header {
   position: relative;
