--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,35 @@
-<div>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="assets/images/logo.png" alt="Spaces Logo" style="height: 40px;">
-      </a>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      <img src="assets/images/logo.png" alt="Spaces Logo" style="height: 40px;">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/contact">Contact</a>
+        </li>
+        <li class="nav-item">
+          <div *ngIf="!isAuthorized">
+            <button type="button" class="btn btn-primary w-100">LOGIN</button>
+          </div>
+          <div *ngIf="isAuthorized">
+            <button type="button" routerLink="" (click)="logout()" class="btn btn-primary w-100">LOGOUT</button>
+          </div>
+        </li>
+      </ul>
     </div>
-
-      <div>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/contact">Contact</a>
-          </li>
-          <li class="nav-item">
-            <div *ngIf="!isAuthorized">
-              <button type="submit" class="btn btn-primary w-100">LOGIN</button>
-            </div>
-            <div *ngIf="isAuthorized">
-              <button type="submit" routerLink=""
-              (click)="logout()"
-              class="btn btn-primary w-100">LOGOUT</button>
-
-            </div>
-
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</div>
+  </div>
+</nav>
 
 <div class="container-fluid p-0">
   <router-outlet></router-outlet>
