--- a/src/app/pages/users-list/users-list.component.html
+++ b/src/app/pages/users-list/users-list.component.html
@@ -58,19 +58,20 @@
                 </div>
                 </td>
               </tr>
-              <tr *ngIf="loadingMore">
+              <!-- <tr *ngIf="loadingMore">
                 <td colspan="2" class="text-center">
                   <div class="spinner-border" role="status">
                     <span class="sr-only">Loading...</span>
                   </div>
                   <p>Loading more users</p>
                 </td>
-              </tr>
+              </tr> -->
             </tbody>
           </table>
-          <div class="text-center mt-3">
+        
+          <!-- <div class="text-center mt-3">
             <button class="btn btn-primary" (click)="loadMoreUsers()">Load More</button>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
